force/src/objects/qualtrics__Survey_Response__c.object
<CustomObject>
    <description>Object to help hold responses for Quick Starts, and custom Surveys built by end-users.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to Case the Survey Response was on.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_10__c</fullName>
        <label>Question 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_11__c</fullName>
        <label>Question 11</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_12__c</fullName>
        <label>Question 12</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_10__c</fullName>
        <label>Response 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_11__c</fullName>
        <label>Response 11</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_12__c</fullName>
        <label>Response 12</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_Action__c</fullName>
        <inlineHelpText>Result of our follow-up call.</inlineHelpText>
        <label>Response Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>qualtrics__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qualtrics__Areas_of_Improvement__c</fullName>
        <label>Areas of Improvement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>qualtrics__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qualtrics__Case_Study__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qualtrics__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qualtrics__Date_Responded__c</fullName>
        <label>Date Responded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qualtrics__Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qualtrics__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>qualtrics__Did_we_offer_lowest_bid__c</fullName>
        <label>Did we offer lowest bid?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qualtrics__Early_Beta_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Early Beta Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qualtrics__Expectation_Explanation__c</fullName>
        <label>Expectation Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>qualtrics__Expectations_Met__c</fullName>
        <label>Expectations Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Far short of expectations</fullName>
                </value>
                <value>
                    <fullName>Short of expectations</fullName>
                </value>
                <value>
                    <fullName>Equals expectations</fullName>
                </value>
                <value>
                    <fullName>Exceeds expectations</fullName>
                </value>
                <value>
                    <fullName>Far exceeds expectations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qualtrics__Joint_Press_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joint Press Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qualtrics__Key_Drivers_for_new_solution__c</fullName>
        <label>Key Drivers for new solution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualtrics__Key_Selection_Criteria__c</fullName>
        <label>Key Selection Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualtrics__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qualtrics__Meeting_Goal_s__c</fullName>
        <label>Meeting Goal(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualtrics__Net_Promoter_Score__c</fullName>
        <label>Net Promoter Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qualtrics__Other_Feedback__c</fullName>
        <label>Other Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>qualtrics__Other_Participation__c</fullName>
        <label>Other Participation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualtrics__Other_Vendor_Strenth_Weakness__c</fullName>
        <label>Other Vendor(s) - Strenth/Weakness</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>qualtrics__Other_Vendor_offer_lowest_bid__c</fullName>
        <label>Other Vendor(s) offer lowest bid?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qualtrics__Other_Vendors_Considered__c</fullName>
        <label>Other Vendors Considered</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qualtrics__Our_Strengths_Weaknesses__c</fullName>
        <label>Our Strengths/Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>qualtrics__Overal_Satisfaction__c</fullName>
        <label>Overal Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qualtrics__Q_Recipient_ID__c</fullName>
        <externalId>true</externalId>
        <label>Q_Recipient ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualtrics__Q_SurveyID__c</fullName>
        <externalId>true</externalId>
        <label>Q_SurveyID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualtrics__Respondent_Role__c</fullName>
        <label>Respondent Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I am the sole decision maker</fullName>
                </value>
                <value>
                    <fullName>I am a major influencer</fullName>
                </value>
                <value>
                    <fullName>I participate with others in making these decisions</fullName>
                </value>
                <value>
                    <fullName>I have little or no role in these decisions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qualtrics__Selected_Vendor__c</fullName>
        <label>Selected Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualtrics__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>qualtrics__Survey__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qualtrics__Team_Knowledgeable__c</fullName>
        <label>Team - Knowledgeable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Exceptional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qualtrics__Team_Pleasant_to_work_with__c</fullName>
        <label>Team - Pleasant to work with</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Exceptional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qualtrics__Team_Professional__c</fullName>
        <label>Team - Professional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Exceptional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qualtrics__Team_Understood_your_Needs__c</fullName>
        <label>Team - Understood your Needs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Exceptional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qualtrics__Testimonial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Testimonial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qualtrics__Timeline_Goal__c</fullName>
        <label>Timeline Goal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualtrics__Timeline_Met__c</fullName>
        <label>Timeline Met?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qualtrics__Vendors_Considered__c</fullName>
        <label>Vendors Considered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qualtrics__Vendors_Using__c</fullName>
        <label>Vendors Using</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qualtrics__Winning_Bid_Price__c</fullName>
        <label>Winning Bid Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Survey Response</label>
    <nameField>
        <label>Survey Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>